Home page 2 - Edit about me

--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-welcome-left">
                 <h2 class="tm-welcome-title">Hi there! Welcome to My Page</h2>
                 <p class="pb-0">
-                  This is Bootstrap v4.3.1 parallax layout for you. Credit goes to <a rel="nofollow" href="https://www.pexels.com">Pexels</a> for 2 background images. In
-                  odio sapien, commodo id ullamcorper ac, dignissim at sapien.
-                  Nullam leo massa, vaius ac massa et, tincidunt imperdiet
-                turpis. </p>
+                  I am a creative minded, highly organized undergraduate who achieve goals through actual willingness without giving up and with the ability to work as a team player or as an individual. Also I can adopt to any kind of situation quickly and able to handle it accordingly.</p>
               </div>
             </div>
             <!-- Brown bg -->
