Home page 2 - Edit objective

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-welcome-right">
                 <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i>
                 <p class="mb-0">
-                  Please spread a word about templatemo website. Anyone can download free Bootstrap CSS templates.
+                  My objective is work for an organization which provides me the opportunity to improve my skills
+                  and knowledge to grow along with the organization objective.
                 </p>
               </div>
             </div>
