--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ https://templatemo.com/tm-530-mini-profile
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
-                  New Company
-                  <span class="tm-title-small">(2019 January to Present)</span>
+                  Silver Rays Industries (Pvt) Limited
+                  <span class="tm-title-small">(2017 January to Present)</span>
                 </h3>
                 <p class="mb-0">
                   Nullam a tellus ultricies, ornare purus vel, porttitor massa.
