Home page 3 - box 1 - edit description

--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@ https://templatemo.com/tm-530-mini-profile
                   <span class="tm-title-small">(2017 January to Present)</span>
                 </h3>
                 <p class="mb-0">
-                  Nullam a tellus ultricies, ornare purus vel, porttitor massa.
-                  Aliquam facilisis purus ac eros sollicidudin, in mollis neque
-                  facilisis. Duis malesuada, mi non elementum malesuada.
+                  I am working as a director of Silver Rays Industries (Pvt) Limited - a Premier Cans Manufacturing Company, located at Templeburg Industrial Estate, Homagama. 
                 </p>
               </div>
             </div>
