--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-orange">
-                Senior UX Designer
+                Co-Owner
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-orange">
