--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ https://templatemo.com/tm-530-mini-profile
                   <span class="tm-title-small">(2017 January to Present)</span>
                 </h3>
                 <p class="mb-0">
-                  I am working as a director of Silver Rays Industries (Pvt) Limited - a Premier Cans Manufacturing Company, located at Templeburg Industrial Estate, Homagama. 
+                  Currently working as a director of Silver Rays Industries (Pvt) Limited - a Premier Cans Manufacturing Company, located at Templeburg Industrial Estate, Homagama. 
                 </p>
               </div>
             </div>
@@ -86,15 +86,11 @@ https://templatemo.com/tm-530-mini-profile
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-orange">
-                  Studio One
-                  <span class="tm-title-small">(2017 April to 2018 Dec)</span>
+                  Star Metal Construction
+                  <span class="tm-title-small">(2017 April to Present)</span>
                 </h3>
                 <p class="mb-0">
-                  Phasellus ac nulla egestas, malesuada dolor quis, scelerisque
-                  arcu. Morbi aliquam, nunc vel blandit mattis, sapien nisl
-                  convallis sem, quis hendrerit nisl tellus in lectus. Proin at
-                  nibh bibendum, tincidunt mauris sit amet, porta risus. Integer
-                  id malesuada ligula.
+                Co-owner of Star Metal Construction - a Metal supplying company, located at Homagama.
                 </p>
               </div>
             </div>
