--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-blue">
-                Graphic Designer
+              Undergraduate
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-blue">
-                  Digital Com
-                  <span class="tm-title-small">(2015 Jan to 2016 Dec)</span>
+                  University of Sri Jayewardenepura
+                  <span class="tm-title-small">(2017 September to Present)</span>
                 </h3>
                 <p class="mb-0">
                   Etiam porta est nisl, consectetur dapibus ante faucibus id.
