Home page 3 - box 3 description

--- a/index.html
+++ b/index.html
@@ -105,9 +105,7 @@ https://templatemo.com/tm-530-mini-profile
                   <span class="tm-title-small">(2017 September to Present)</span>
                 </h3>
                 <p class="mb-0">
-                  Etiam porta est nisl, consectetur dapibus ante faucibus id.
-                  Nunc ullamcorper a quam eget tincidunt. Proin vehicula mauris
-                  ipsum, euismod dignissim dolor convallis ac.
+                  Currently a 3rd year Undergraduate at Faculty of Applied Sciences, University of Sri Jayewardenepura. 
                 </p>
               </div>
             </div>
