Home page 3 - box 4

--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-dark-gray">
-                Design School
+                Committee Member
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-dark-gray">
-                  Art Design College
+                  Aurora 2018
                   <span class="tm-title-small">
-                    (2012 May to 2014 Dec)
+                  
                   </span>
                 </h3>
                 <p class="mb-0">
