home page 3 - box 4 description

--- a/index.html
+++ b/index.html
@@ -122,9 +122,7 @@ https://templatemo.com/tm-530-mini-profile
                   </span>
                 </h3>
                 <p class="mb-0">
-                  Etiam porta est nisl, consectetur dapibus ante faucibus id.
-                  Nunc ullamcorper a quam eget tincidunt. Proin vehicula mauris
-                  ipsum, euismod dignissim dolor convallis ac.
+                  Committee member in the organizing committee of Aurora 2018 - Conference on Computer Science organized by the Department of Computer Science of University of Sri Jayewardenepura
                 </p>
               </div>
             </div>
