--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-briefcase tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  Quisque venenatis viverra ultrices. Lorem ipsum dolor sit
-                  amet. Nullam sit amet tempor nisl.
+                  I have successfully completed Brand management : Aligning Business, Brand and Behaviour course authorized by University of London and London Business
+                  School
                 </p>
               </div>
               <div class="tm-contact-item">
