Home page 4 - box 2 edit

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-briefcase tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  I have successfully completed Brand management : Aligning Business, Brand and Behaviour course authorized by University of London and London Business
+                  I have successfully completed "Brand management : Aligning Business, Brand and Behaviour" course authorized by University of London and London Business
                   School
                 </p>
               </div>
@@ -155,7 +155,8 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-balance-scale tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  You are NOT allowed to re-distribute this template in any download website. Else, it is illegal action.
+                  I have successfully completed "Managing the Company of the Future" course authorized by University of London and London
+                  Business School
                 </p>
               </div>
             </div>
