Home page 5 - edit

--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-briefcase tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  I have successfully completed "Brand management : Aligning Business, Brand and Behaviour" course authorized by University of London and London Business
+                  I have successfully completed "Brand management : Aligning Business, Brand and Behaviour course authorized by University of London and London Business
                   School
                 </p>
               </div>
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-building tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  You can absolutely feel free to use Mini Profile for your web page or any usage for your website.
+                  I have successfully completed "Understanding Financial Markets" course authorized by University of Geneva
                 </p>
               </div>
 
@@ -177,7 +177,7 @@ https://templatemo.com/tm-530-mini-profile
                   id="contact_name"
                   name="contact_name"
                   class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
-                  placeholder="Name"
+                  placeholder="Your name"
                   required
                 />
               </div>
@@ -187,7 +187,7 @@ https://templatemo.com/tm-530-mini-profile
                   id="contact_email"
                   name="contact_email"
                   class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
-                  placeholder="Email"
+                  placeholder="Your email"
                   required
                 />
               </div>
@@ -197,7 +197,7 @@ https://templatemo.com/tm-530-mini-profile
                   id="contact_message"
                   name="contact_message"
                   class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
-                  placeholder="Message"
+                  placeholder="Your message"
                   required
                 ></textarea>
               </div>
@@ -206,7 +206,7 @@ https://templatemo.com/tm-530-mini-profile
                   type="submit"
                   class="btn tm-btn-submit rounded-0 text-white"
                 >
-                  Submit
+                  Send
                 </button>
               </div>
             </form>
