Bottom line edit

--- a/index.html
+++ b/index.html
@@ -216,9 +216,7 @@ https://templatemo.com/tm-530-mini-profile
         <div class="row">
           <footer class="col-12">
             <p class="text-center tm-copyright-text">
-            Copyright 2020 Mini Profile Page 
-            
-            - Design: Template Mo</p>
+            ____Thank you for visiting My Page____</p>
           </footer>
         </div>
       </div>
