--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ https://templatemo.com/tm-530-mini-profile
   </head>
   <body>
     <!-- Welcome Section -->
-    <section id="tmWelcome" class="parallax-window" data-parallax="scroll" data-image-src="img/mini-profile-bg-01.jpg">
+    <section id="tmWelcome" class="parallax-window" data-parallax="scroll" data-image-src="img/profile-01.jpg">
       <div class="container-fluid tm-brand-container-outer">
-        <div class="row">
-          <div class="col-12">
+        <div class="row-10">
+          <div class="col-20">
             <!-- Logo Area -->
             <!-- Black transparent bg -->
             <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
@@ -97,7 +97,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-blue">
-              Undergraduate
+              Undergrad
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-blue">
@@ -133,27 +133,27 @@ https://templatemo.com/tm-530-mini-profile
     <!-- End portfolio section -->
 
     <!-- Contact section -->
-    <div id="tmContact" class="parallax-window" data-parallax="scroll" data-image-src="img/mini-profile-bg-02.jpg">
+    <div id="tmContact" class="parallax-window" data-parallax="scroll" data-image-src="img/profile-2.jpeg">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
             <div class="tm-contact-items-container">
               <div class="tm-contact-item">
-                <i class="fas fa-5x fa-briefcase tm-contact-item-icon"></i>
+                <i class="fas fa-5x fa-copyright tm-contact-item-icon"></i>
                 <p class="mb-0">
                   I have successfully completed "Brand management : Aligning Business, Brand and Behaviour course authorized by University of London and London Business
                   School
                 </p>
               </div>
               <div class="tm-contact-item">
-                <i class="fas fa-5x fa-building tm-contact-item-icon"></i>
+                <i class="fas fa-5x fa-hand-holding-usd tm-contact-item-icon"></i>
                 <p class="mb-0">
                   I have successfully completed "Understanding Financial Markets" course authorized by University of Geneva
                 </p>
               </div>
 
               <div class="tm-contact-item">
-                <i class="fas fa-5x fa-balance-scale tm-contact-item-icon"></i>
+                <i class="fas fa-5x fa-building tm-contact-item-icon"></i>
                 <p class="mb-0">
                   I have successfully completed "Managing the Company of the Future" course authorized by University of London and London
                   Business School
