Home page final edit

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ https://templatemo.com/tm-530-mini-profile
                   </span>
                 </h3>
                 <p class="mb-0">
-                  Committee member in the organizing committee of Aurora 2018 - Conference on Computer Science organized by the Department of Computer Science of University of Sri Jayewardenepura
+                  Committee member in the organizing committee of Aurora 2018 - Conference on Computer Science organized by the Department of Computer Science of University of Sri Jayewardenepura.
                 </p>
               </div>
             </div>
@@ -141,14 +141,14 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-copyright tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  I have successfully completed "Brand management : Aligning Business, Brand and Behaviour course authorized by University of London and London Business
-                  School
+                  I have successfully completed "Brand management : Aligning Business, Brand and Behaviour" course authorized by University of London and London Business
+                  School.
                 </p>
               </div>
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-hand-holding-usd tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  I have successfully completed "Understanding Financial Markets" course authorized by University of Geneva
+                  I have successfully completed "Understanding Financial Markets" course authorized by University of Geneva.
                 </p>
               </div>
 
@@ -156,7 +156,7 @@ https://templatemo.com/tm-530-mini-profile
                 <i class="fas fa-5x fa-building tm-contact-item-icon"></i>
                 <p class="mb-0">
                   I have successfully completed "Managing the Company of the Future" course authorized by University of London and London
-                  Business School
+                  Business School.
                 </p>
               </div>
             </div>
